--- a/main.html
+++ b/main.html
@@ -6,9 +6,12 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body >
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <script>
+		document.addEventListener('DOMContentLoaded',function(){
+					document.body.append("DOM load success")
+		})
 </script>
 
 </body>
