--- a/main.html
+++ b/main.html
@@ -6,12 +6,9 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body >
+<body>
 	<!-- the entire body must be written by student -->
-    <script>
-		document.addEventListener('DOMContentLoaded',function(){
-					document.body.append("DOM load success")
-		})
+    <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
